# smart-insurance-ai

./: .env.example  .gitignore  LICENSE  Makefile  README.md  app.py  pyproject.toml  smart_insurance.db
.streamlit/: config.toml
artifacts/frequency_logreg/: meta.json  metrics.json  model.joblib
artifacts/frequency_logreg_calibrated/: meta.json  metrics.json  model.joblib
artifacts/sklearn/: cluster_profiles.json  frequency_metrics.json  frequency_model.joblib  segmentation_pipeline.joblib  severity_metrics.json  severity_model.joblib
artifacts/uncertainty_deeponet/: meta.json  model.pt  preprocessor.joblib
data/processed/: filtered_governorates_with_poi.csv  policy_master_ins.csv
notebooks/: 01_build_policy_master.ipynb
scripts/: audit_frequency_artifact.py  check_deeponet_inference.py  check_frequency_inference.py  evaluate_frequency_outputs.py  test_frequency.py  test_quote_with_models.py  test_runtime_models.py  test_segmentation.py  test_severity.py  test_uncertainty_service.py  train_deeponet_uncertainty.py  train_frequency.py  train_frequency_calibrated.py  train_segmentation.py  train_severity.py
src/api/: main.py  schemas.py
src/app/: streamlit_app.py
src/common/: ui.py
src/features/: schemas.py
src/llm/: __init__.py  explainer.py  prompts.py
src/models/: deeponet_uncertainty.py  frequency.py  frequency_model.py  frequency_service.py  geo_proxies.py  segmentation.py  severity.py  (+2 more)
tests/: test_frequency_inference.py  test_llm_local.py  test_models_in_compute_quote.py  test_offer_local.py  test_uncertainty_deeponet_integration.py
(+12 files in other folders)
